# offline-translator

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  OFFLINE_SETUP.md  README.md  add_license.sh  build.gradle.kts  build.sh  download.py  generate.py  indexer.py  mozilla-translate  settings.gradle.kts  sign-apk.sh
.github/workflows/: build.yml
app/: build.gradle.kts  detekt-config.yml  proguard-rules.pro
app/bergamot/: build.gradle.kts
app/bergamot/src/androidTest/java/com/example/bergamot/: ExampleInstrumentedTest.kt
app/bergamot/src/androidTest/java/dev/davidv/bergamot/: ExampleInstrumentedTest.kt
app/bergamot/src/main/cpp/: CMakeLists.txt  bergamot.cpp
app/bergamot/src/main/cpp/cmake/: cld2.cmake
app/bergamot/src/main/java/com/example/bergamot/: NativeLib.kt
app/bergamot/src/main/java/dev/davidv/bergamot/: NativeLib.kt
app/bergamot/src/test/java/com/example/bergamot/: ExampleUnitTest.kt
app/bergamot/src/test/java/dev/davidv/bergamot/: ExampleUnitTest.kt
app/src/androidTest/assets/: index.json  vocab.esen.spm
app/src/androidTest/java/com/example/translator/: ExampleInstrumentedTest.kt
app/src/androidTest/java/dev/davidv/translator/: DictionaryUsageInstrumentedTest.kt  ExampleInstrumentedTest.kt  ImageShareIntentInstrumentedTest.kt  LanguageDetectionInstrumentedTest.kt  ShareIntentInstrumentedTest.kt  TestUtils.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/dev/davidv/translator/: ErrorType.aidl  ITranslationCallback.aidl  ITranslationService.aidl  TranslationError.aidl
app/src/main/bindings/: .gitignore  Cargo.toml
app/src/main/bindings/.cargo/: config.toml
app/src/main/bindings/src/: lib.rs  logging.rs  mucab.rs  tarkka.rs  tesseract.rs
app/src/main/cpp/: CMakeLists.txt  empty.cpp
app/src/main/java/com/example/translator/: AppSettings.kt  BackgroundMode.kt  Constants.kt  DetectedLanguageToast.kt  DownloadService.kt  ImagePainting.kt  ImageProcessor.kt  InputType.kt  Language.kt  LanguageDetector.kt  LanguageManager.kt  LanguageSelector.kt  MainActivity.kt  OCRService.kt  SettingsManager.kt  SettingsScreen.kt  StyledTextField.kt  TranslationCoordinator.kt  TranslationField.kt  TranslationService.kt  TranslatorApp.kt  TranslatorMessage.kt
app/src/main/java/com/example/translator/ui/theme/: Theme.kt
app/src/main/java/dev/davidv/translator/: AidlTranslationService.kt  AppSettings.kt  BackgroundMode.kt  Constants.kt  DetectedLanguageSection.kt  DetectedLanguageToast.kt  DictionaryIndex.kt  DownloadEvent.kt  DownloadService.kt  FileEvent.kt  FilePathManager.kt  FontSize.kt  ImagePainting.kt  ImageProcessor.kt  InputSection.kt  InputType.kt  Language.kt  LanguageDetector.kt  LanguageDownloadButton.kt  LanguageManager.kt  LanguageMetadata.kt  LanguageMetadataManager.kt  LanguageSelectionRow.kt  LanguageSelector.kt  LanguageStateManager.kt  LaunchMode.kt  MainActivity.kt  MucabBinding.kt  NoLanguagesScreen.kt  OCRService.kt  PermissionHelper.kt  ProcessTextActivity.kt  SettingsManager.kt  SettingsScreen.kt  StyledTextField.kt  TarkkaBinding.kt  TarkkaData.kt  TesseractBinding.kt  TesseractData.kt  TesseractOCR.kt  (+10 more)
app/src/main/java/dev/davidv/translator/ui/components/: DetectedLanguageSection.kt  DetectedLanguageToast.kt  DictionaryActionModeCallback.kt  DictionaryBottomSheet.kt  ImageCaptureComponent.kt  ImageDisplaySection.kt  InputSection.kt  InteractiveText.kt  LanguageDownloadButton.kt  LanguageManageDialog.kt  LanguageManageDialogController.kt  LanguageSelectionRow.kt  LanguageSelector.kt  StyledTextField.kt  TranslationField.kt  TranslationOutputSection.kt  ZoomableImageViewer.kt
app/src/main/java/dev/davidv/translator/ui/screens/: MainScreen.kt  NoLanguagesScreen.kt  SettingsScreen.kt  TabbedLanguageManagerScreen.kt  TranslatorApp.kt
app/src/main/java/dev/davidv/translator/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: add.xml  check.xml  compare.xml  copy.xml  ic_launcher_foreground.xml  ic_launcher_foreground_monochrome.xml  paste.xml  rounded_dialog_background.xml  settings_dot.xml  star.xml  star_filled.xml
app/src/main/res/drawable-anydpi/: add.xml  camera.xml  gallery.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/translator/: ExampleUnitTest.kt
app/src/test/java/dev/davidv/translator/: ExampleUnitTest.kt  OCRServiceTest.kt  StringUtilsTest.kt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  summary.txt
fastlane/metadata/android/en-US/changelogs/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
website/: index.html
