[package]
name = "bindings"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
name = "bindings"
path = "src/lib.rs"

[dependencies]
jni = "0.21.1"
tarkka = { version = "0.1.0", path = "../nativeDeps/tarkka" }
tesseract = { path = "/home/david/git/tesseract-rs" }

[patch.crates-io]
leptonica-sys = { path = "/home/david/git/leptonica-sys" }
tesseract-sys = { path = "/home/david/git/tesseract-sys" }
