[package]
name = "bindings"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
name = "bindings"
path = "src/lib.rs"

[dependencies]
jni = "0.21.1"
tarkka = { version = "0.1.0", path = "../nativeDeps/tarkka" }
tesseract = { path = "../nativeDeps/tesseract-rs" }

[patch.crates-io]
leptonica-sys = { path = "../nativeDeps/leptonica-sys" }
tesseract-sys = { path = "../nativeDeps/tesseract-sys" }
tesseract-plumbing = { path = "../nativeDeps/tesseract-plumbing" }

[profile.release]
lto = "fat"
codegen-units = 1
debug = false
strip = true
